# fp-cpp-init

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
include/fp-cpp-init/: cli.hpp  project.hpp  templates.hpp
src/: cli.cpp  cli.hpp  main.cpp  platform.cpp  platform.hpp  project.cpp  project.hpp  render.cpp  render.hpp  result.hpp  templates.hpp
tests/: CMakeLists.txt  test_cli.cpp  test_platform.cpp  test_project.cpp  test_render.cpp  test_result.cpp
